src/components/auth/Auth.module.scss
@use "../../styles/mixins";

@use "../../styles/scssVariables" as v;

$footerButtonHeight: 3rem;
$footerPaddingTop: 0.75rem;
$footerPaddingBottomMin: 1rem;

.wrapper {
  height: 100%;
}

.transitionContainer {
  :global(html.is-telegram-app) & {
    --header-padding-top: 0.625rem;
  }

  @include mixins.respond-above(xs) {
    overflow: hidden;
    max-width: v.$landscapeAuthContentMaxWidth;
    margin: 0 auto;

    &:global(.Transition_slide-to),
    &:global(.Transition_slide-from) {
      left: 50%;
      transform: translateX(-50%);
    }
  }
}

.transitionSlide {
  background: var(--color-background-second);

  @supports (padding-top: var(--safe-area-top)) {
    padding-top: var(--safe-area-top);
  }

  :global(html.is-telegram-app.is-fullscreen) & {
    padding-top: calc(var(--tg-safe-area-inset-top) + var(--header-padding-top))
  }
}

.container {
  overflow-y: scroll;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;

  max-width: v.$portraitContentMaxWidth;
  height: 100%;
  max-height: 100%;
  margin: 0 auto;
  padding: 0 1rem 1rem;

  @include mixins.adapt-padding-to-scrollbar(1rem);

  @include mixins.respond-above(xs) {
    max-width: v.$landscapeAuthContentMaxWidth;
  }

  @supports (padding-bottom: var(--safe-area-bottom)) {
    padding-bottom: max(1rem, var(--safe-area-bottom));
  }

  @include mixins.respond-above(sm) {
    padding: 2rem;

    @include mixins.adapt-padding-to-scrollbar(2rem, !important);
  }

  &_scrollable {
    scrollbar-gutter: stable;
    scroll-padding-top: calc(#{v.$portraitHeaderHeight} + var(--safe-area-top));
    scroll-padding-bottom: calc($footerButtonHeight + $footerPaddingTop + max($footerPaddingBottomMin, var(--safe-area-bottom)));
    justify-content: unset !important;
  }
}

.containerWithHeader {
  padding-top: v.$portraitHeaderHeight;
}

.containerFullSize {
  overflow: hidden;
  padding: 0 !important;
}

.aboutSlide {
  position: static !important;
  padding-top: 0 !important;
}

.logoContainer {
  position: relative;
  width: 20.125rem;
  height: 12.75rem;
  margin: 1.875rem 0 0 0;

  &:active .logoReadyToScale {
    transform: scale(0.96);
  }
}

.logoParticles {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;

  @include mixins.respond-above(xs) {
    top: -1.875rem;
  }
}

.logo {
  position: relative;
  z-index: 1;

  display: block !important;

  width: 7.5rem;
  height: 7.5rem;
  margin: 3.125rem auto 0;

  @include mixins.transition('opacity 1s ease, transform 350ms ease-out', !important);

  &:global(:not(.open)) {
    transform: translateY(-0.75rem);
  }

  &ReadyToScale {
    @include mixins.transition('transform 150ms', !important);
  }
}

.appName {
  margin: 0 0 1.375rem;
}

.title {
  flex-shrink: 0;
  margin: 1.375rem 1rem 1.875rem;
  text-align: center;

  &_afterSmallSticker {
    margin: 2rem 1rem 1.25rem;
  }

  @media (max-width: 460px) {
    overflow-wrap: anywhere; // For Spanish localization on small screens
  }
}

.titleSmallMargin {
  margin-bottom: 0.25rem;
}

.title, .appName {
  font-size: 2rem;
  font-weight: 800;
  line-height: 2.375rem;
  color: var(--color-black);
}

.infoBlock {
  padding: 1rem;
  border-radius: var(--border-radius-default);

  font-size: 0.9375rem;
  color: var(--color-gray-1);

  background: var(--color-background-first);
}

.lawBlock {
  width: 100%;
  margin-top: 1.25rem;
}

.text {
  margin-bottom: 0;
  line-height: 1.1875rem;

  & + & {
    margin-top: 1.1875rem;
  }
}

.info {
  flex-shrink: 0;

  width: 100%;

  font-weight: 500;
  color: var(--color-gray-1);
  text-align: center;
}

.infoPull {
  margin-bottom: 1.5rem;
}

.infoSmallFont {
  font-size: 0.9375rem;
  font-weight: 400;
}

.counter {
  position: relative;
  z-index: 2;

  overflow: hidden;
  display: flex;
  flex-direction: column;
  align-items: center;

  width: 14.5rem;
  height: 6.5rem;
  margin-top: 3rem;
  border: 0.1875rem solid transparent;
  border-radius: var(--border-radius-default);

  color: var(--color-accent);

  background: linear-gradient(to top, var(--color-background-first), var(--color-background-first)),
  linear-gradient(to top, #2C92F099, #2C92F01A 50%, #2C92F000 70%) no-repeat 50% 50%;
  background-clip: content-box, border-box;
  background-origin: border-box;

  :global(.theme-dark) & {
    background: linear-gradient(to top, var(--color-background-first), var(--color-background-first)),
    linear-gradient(to top, #469CEC, #469CEC3D 50%, #469CEC00 90%) no-repeat 50% 50%;
    background-clip: content-box, border-box;
    background-origin: border-box;
  }

  @media (prefers-color-scheme: dark) {
    :global(.theme-system) & {
      background: linear-gradient(to top, var(--color-background-first), var(--color-background-first)),
      linear-gradient(to top, #469CEC, #469CEC3D 50%, #469CEC00 90%) no-repeat 50% 50%;
      background-clip: content-box, border-box;
      background-origin: border-box;
    }
  }
}

.counterTitle {
  margin: 1rem 0 0;
  font-size: 1.0625rem;
  font-weight: 600;
}

.counterDigit {
  position: absolute;
  top: 3rem;

  font-size: 2.25rem;
  font-weight: 800;
  line-height: 2.75rem;
  color: var(--color-accent);

  opacity: 0.8 !important;

  transition: opacity 500ms ease-out, transform 500ms ease-out !important;

  &:global(.open) {
    transform: scale(2.3);
    opacity: 0 !important;
  }

  :global(.theme-dark) & {
    color: var(--color-white);
  }

  :global(html.animation-level-0) & {
    transform: scale(2) !important;
    transition: opacity 500ms ease-out !important;
  }

  @media (prefers-color-scheme: dark) {
    :global(.theme-system) & {
      color: var(--color-white);
    }
  }
}

.small {
  max-width: 20rem;
  margin: 0 auto 1.25rem;
  font-size: 0.9375rem;
  font-weight: 400;
}

.topSticker {
  margin-top: 1.5rem;
}

.sticker {
  flex-shrink: 0;
  margin-top: 3.375rem;

  :global(html.is-electron) & {
    margin-top: 0;
  }
}

.viewModeSticker {
  margin: 1.5rem auto;
}

.modalSticker {
  margin: -0.375rem auto 1.25rem;
}

.form {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
  width: 100%;
}

.formWidgets {
  width: 100%;
  margin-top: 1.75rem;
}

.passwordForm {
  width: 100%;
  margin-top: 3.375rem;
  padding: 0 !important;

  :global(html.is-electron) & {
    margin-top: 0;
  }
}

.errors {
  width: 100%;
  padding: 0 0.5rem;

  font-size: 0.8125rem;
  font-weight: 600;
  color: var(--color-gray-1);
}

.passwordRules {
  width: 100%;
  padding: 0 0.5rem;
  font-size: 0.8125rem;
  color: var(--color-gray-1);
}

.passwordRule {
  font-weight: 600;
  transition: color 150ms;

  :global(html.animation-level-0) & {
    transition: none !important;
  }
}

.valid {
  color: var(--color-green);
}

.invalid {
  color: var(--color-red);
}

.error {
  font-size: 0.9375rem;
  font-weight: 600;
  color: var(--color-red);
  text-align: center;
}

.btn {
  width: 100%;
  max-width: 100% !important;
  margin: 0 auto;
  font-weight: 700 !important;

  &_text {
    height: 3rem !important;
  }

  &_about {
    display: flex;
    align-items: center;

    margin: 2rem auto 1rem;

    font-size: 1.0625rem !important;
    font-weight: 700;
    color: var(--color-accent-button-background);

    &:hover,
    &:focus-visible {
      color: var(--color-accent-button-background-hover);
    }
  }
}

.privateKey {
  font-family: monospace;
  word-break: break-all;
}

.pasteButton {
  flex-shrink: 0;
  height: 3rem;
  margin-bottom: 1.5rem;
  font-weight: 700;

  > .pasteButtonIcon {
    margin-inline-end: 0.25rem;
    font-weight: 700 !important;
  }
}

.modeSwitchRoot {
  display: flex;
  flex-shrink: 0;
  justify-content: center;

  width: 100%;
  margin-bottom: 1.5rem;
}

.modeSwitch {
  --tab-gap-size: 0;

  align-items: center;

  min-width: 12rem;
  padding: 0.1875rem;
  border-radius: var(--border-radius-default);

  background-color: var(--color-background-first);
}

.modeSwitchOverlay {
  --tab-gap-size: 0;

  top: 0.1875rem;
  right: 0;
  bottom: 0.1875rem;
  left: 0;

  align-items: center;

  width: auto;
  padding: 0 0.1875rem;
}

.modeTab {
  flex: 1 1 0;
}

.importingContent {
  display: grid;
  grid-auto-flow: column;
  grid-template: repeat(12, 1fr) / repeat(2, 1fr);
  flex-shrink: 0;
  gap: 1rem;

  margin-bottom: calc(4.5rem + var(--safe-area-bottom, 0px));

  @include mixins.respond-above(xs) {
    grid-template: repeat(8, 1fr) / repeat(3, 1fr);
  }
}

.importingContent_short {
  grid-template: repeat(6, 1fr) / repeat(2, 1fr);

  @include mixins.respond-above(xs) {
    grid-template: repeat(4, 1fr) / repeat(3, 1fr);
  }
}

.importingContent_withError {
  margin-bottom: calc(6.5rem + var(--safe-area-bottom, 0px));
}

.footerError {
  margin: 0 0 0.5rem;

  font-size: 0.9375rem;
  font-weight: 600;
  color: var(--color-red);
  text-align: center;
}

.responsibilityCheckbox {
  margin-bottom: 1rem;
}

.responsibilityCheckboxSimple {
  margin-bottom: 0;
}

.responsibilityCheckboxContent {
  margin-top: 0.0625rem;
  font-size: 0.9375rem;
  font-weight: 600;

  &::before,
  &::after {
    top: 0 !important;
  }
}

.responsibilityCheckboxLink {
  font-weight: 650;
}

.buttons {
  display: flex;
  flex-direction: column;
  flex-shrink: 0;
  gap: 0.5rem;
  align-items: center;

  width: 100%;
  margin-top: auto;
  padding: 0 1rem;

  &Push {
    padding-top: 3.5rem;
  }

  &BottomStuck {
    position: fixed;
    right: 0;
    bottom: 0;
    left: 0;

    padding: #{$footerPaddingTop} 0 max(#{$footerPaddingBottomMin}, var(--safe-area-bottom));

    background: var(--color-background-second);

    &:not(.buttonsNoSeparator) {
      @include mixins.separator();
    }
  }

  &BottomStuckInner {
    width: 100%;
    max-width: v.$landscapeAuthContentMaxWidth;
    margin: 0 auto;
    padding: 0 2rem;

    @include mixins.respond-above(xs) {
      padding: 0 3rem;
    }
  }

  &InModal {
    padding: 0;
  }
}

.coreWalletButtons {
  gap: 2rem;
}

.importText {
  position: relative;

  font-size: 0.9375rem !important;
  font-weight: 400;
  line-height: 1.0625rem;
  color: var(--color-gray-3);

  &::before,
  &::after {
    content: '';

    position: absolute;
    right: 0;
    bottom: 0.5rem;
    left: -5.125rem;

    width: 4.5rem;
    height: 0.0625rem;

    box-shadow: inset 0 -0.0375rem 0 0 var(--color-separator);
  }

  &::after {
    position: absolute;
    right: -5.125rem;
    left: auto;
  }
}

.coreWalletStartButtons {
  display: flex;
  gap: 1rem;
  width: 100%;
  margin: 0 -1rem;
}

.biometricsStep {
  align-self: center;

  margin-bottom: 1rem;
  padding: 0.75rem;
  border-radius: var(--border-radius-normal);

  font-size: 0.9375rem;
  font-weight: 600;
  color: var(--light-gray-1);
  white-space: nowrap;

  background-color: var(--color-gray-button-background-light);
}

.biometricsError {
  align-self: center;

  padding: 0.5rem 0.75rem;
  border-radius: var(--border-radius-normal);

  font-size: 0.9375rem;
  font-weight: 600;
  line-height: 1.3125rem;
  color: var(--color-transaction-amount-red-text);
  text-align: center;

  background-color: var(--color-transaction-amount-red-bg);
}

.pinPadHeader {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: auto;
}

.headerBack {
  cursor: var(--custom-cursor, pointer);

  position: absolute;
  top: 1.5rem;
  left: 0.5rem;

  display: flex;
  align-items: center;

  padding: 0;

  font-size: 1.0625rem;
  color: var(--color-accent);

  @supports (top: max(calc(var(--safe-area-top) + 0.375rem), 1.5rem)) {
    top: max(calc(var(--safe-area-top) + 0.375rem), 1.5rem);
  }

  :global(html.is-telegram-app) & {
    visibility: hidden;
  }
}

.iconChevron {
  font-size: 1.5rem;
}

.actionsSection {
  margin: 0 1rem 1.5rem;
}

.importModalContent {
  padding-top: 1rem;

  @include mixins.respond-below(xs) {
    padding-bottom: max(calc(var(--safe-area-bottom) - 1.5rem), 0px);
  }
}

